<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_backImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/graycircle"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/backblack" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@id/txt_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rate_dialogue_msg"
            android:textColor="@color/red"
            android:textSize="26sp" />

        <!--        <RatingBar-->
        <!--            style="@style/foodRatingBar"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="5dp"-->
        <!--            android:isIndicator="true"-->
        <!--            android:numStars="5"-->
        <!--            android:rating="0"-->
        <!--            android:scaleX="0.5"-->
        <!--            android:scaleY="0.5"-->
        <!--            android:stepSize="0.1"-->
        <!--            android:visibility="visible" />-->
        <RatingBar
            android:id="@+id/rb_rate_review"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:isIndicator="false"
            android:numStars="5"
            android:theme="@style/RatingBar" />


        <EditText
            android:id="@+id/ed_review_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Share_your_experience"
            android:padding="15dp"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rateapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Rate_App"
            android:textColor="@color/red"
            android:textSize="26sp" />

        <RatingBar
            android:id="@+id/rb_rate_review_1"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:isIndicator="true"
            android:numStars="5"
            android:theme="@style/RatingBar"
           />
        <EditText
            android:id="@+id/ed_app_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/Share_your_experience"
            android:padding="15dp"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/txt_submit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_golden"
            android:gravity="center"
            android:paddingLeft="@dimen/font_size_20sp"
            android:paddingTop="@dimen/margin_basic_4dp"
            android:paddingRight="@dimen/font_size_20sp"
            android:paddingBottom="@dimen/margin_basic_4dp"
            android:text="@string/bt_submit"
            android:textColor="#FFFF"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>