<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20sp"
    app:cardCornerRadius="20dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="@dimen/font_size_20sp"
            android:layout_marginTop="@dimen/font_size_20sp"
            android:layout_marginRight="@dimen/font_size_20sp"
            app:cardCornerRadius="@dimen/margin_basic_10dp">

            <ImageView
                android:id="@+id/iv_rest_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/chicken2" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="Chicken Machboos is ready !"
            android:textColor="@color/gray"
            android:textSize="@dimen/font_size_12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_rst_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="At: Parallax Restaurant"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/red"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/Do_you_want"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_size_20sp"
            android:layout_marginBottom="@dimen/font_size_20sp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/btn_green"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:text="@string/yes"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="#FFFF"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_golden"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="3dp"
                android:paddingEnd="20dp"
                android:paddingBottom="3dp"
                android:text="@string/no"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="#FFFF"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>